[project]
name = "image-titler"
version = "0.1.0"
description = "Add logo and text overlay to images, optimized for video conferencing backgrounds."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.8", "pillow>=11.1.0", "typing-extensions>=4.12.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
image-titler = "image_titler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/image_titler"]
